--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">世界这么大 我想和你一起去看看💞</h5>
       </div>
     </div>
     <div class="seven">
